# cvasl-gui

./: .gitignore  README.md  build.sh  cvasl-gui.spec  pyproject.toml
.github/workflows/: build-and-test.yml  publish.yml  release.yml
src/: app.py  data_store.py  index.py  tab_compare.py  tab_input_selection.py
src/assets/: custom.css  style.css
src/components/: data_table.py  date_picker.py  directory_input.py  graph.py
src/components/plots/: box_plot.py  scatter_plot.py  violin_plot.py
src/cvasl_gui/: app.py  data_store.py  index.py
src/cvasl_gui/components/: data_table.py  directory_input.py  job_list.py
src/cvasl_gui/components/plots/: box_plot.py  scatter_plot.py  violin_plot.py
src/cvasl_gui/jobs/: harmonization_job.py  prediction_job.py
src/cvasl_gui/tabs/: compare.py  estimation.py  harmonization.py  input_selection.py  job_list.py  parameters.py  prediction.py
tests/: README.md  __init__.py  conftest.py  test_app.py
