[tool.poetry]
name = "cvasl-gui"
version = "0.1.4"
description = "A GUI for the cvasl package"
authors = ["Peter Kok <p.kok@esciencecenter.nl>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.2"
pandas = "^2.2.3"
statsmodels = "^0.14.4"
python-dotenv = "^1.0.1"
waitress = "^3.0.2"
dash-bootstrap-components = "1.7.1"

[tool.poetry.scripts]
cvasl-gui = "cvasl_gui.index:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
