[tool.poetry]
name = "cvasl-gui"
version = "0.0.0"  # Managed by setuptools-scm
description = "A GUI for the cvasl package"
authors = ["Peter Kok <p.kok@esciencecenter.nl>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
dash = "^2.18.2"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
waitress = "^3.0.2"
dash-bootstrap-components = "1.7.1"
cvasl = "^0.1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"
pytest-cov = "^4.0.0"
pyinstaller = "^6.11.0"

[tool.poetry.scripts]
cvasl-gui = "cvasl_gui.index:main"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools-scm>=8.0", "poetry-setuptools-scm-plugin"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
# Version is automatically derived from git tags
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
